pygst: Get the _PyGst_API symbol from the proper module

https://bugzilla.gnome.org/show_bug.cgi?id=634365